[gd_scene load_steps=18 format=3 uid="uid://du1w5tmufmu21"]

[ext_resource type="Script" path="res://player/fire.tres.gd" id="1_b1qp2"]
[ext_resource type="Shader" uid="uid://dogojnapblc3a" path="res://player/Fire.tres" id="2_4g6b5"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_05nir"]
bounce = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_4f27a"]
radius = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2xdno"]
render_priority = 0
shader = ExtResource("2_4g6b5")
shader_parameter/Vector3Parameter = Vector3(0, -0.5, 0)
shader_parameter/VertexSpeed = 0.5
shader_parameter/Intenseti = 0.2
shader_parameter/Albedo = Color(0, 0, 0, 1)
shader_parameter/AlphaSpeed = 0.5
shader_parameter/Alpha = 1.0
shader_parameter/EmissonColor = Color(1, 0.392157, 0, 1)
shader_parameter/EmissionIntensity = 2.0

[sub_resource type="SphereMesh" id="SphereMesh_3b3us"]
material = SubResource("ShaderMaterial_2xdno")
radius = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2xdl2"]
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0.0196078, 0, 1)
emission_energy_multiplier = 20.0

[sub_resource type="SphereMesh" id="SphereMesh_oycmn"]
material = SubResource("StandardMaterial3D_2xdl2")
radius = 3.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aoc8a"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_4g6b5")
shader_parameter/Vector3Parameter = Vector3(0, -0.5, 0)
shader_parameter/VertexSpeed = 0.5
shader_parameter/Intenseti = 0.2
shader_parameter/Albedo = Color(0, 0, 0, 1)
shader_parameter/AlphaSpeed = 0.5
shader_parameter/Alpha = 1.0
shader_parameter/EmissonColor = Color(1, 0.356863, 0, 1)
shader_parameter/EmissionIntensity = 2.0

[sub_resource type="SphereMesh" id="SphereMesh_f2402"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_aoc8a")
radius = 1.0
height = 2.0

[sub_resource type="Animation" id="Animation_l2215"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("corefire:mesh:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("corefire:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("corefire:mesh:material:shader_parameter/EmissionIntensity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("corefire:mesh:material:shader_parameter/Alpha")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Damage/CollisionShape3D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("bladefire:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uvjwx"]
resource_name = "base"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("corefire:mesh:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("corefire:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("corefire:mesh:material:shader_parameter/EmissionIntensity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("corefire:mesh:material:shader_parameter/Alpha")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Damage/CollisionShape3D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("bladefire:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rrlep"]
resource_name = "explode"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("corefire:mesh:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 16.0, 32.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("corefire:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.0, 32.0, 64.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("corefire:mesh:material:shader_parameter/EmissionIntensity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.0, 0.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("corefire:mesh:material:shader_parameter/Alpha")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4.0, 0.5]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Damage/CollisionShape3D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("bladefire:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1u51c"]
_data = {
"RESET": SubResource("Animation_l2215"),
"base": SubResource("Animation_uvjwx"),
"explode": SubResource("Animation_rrlep")
}

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_r847y"]

[sub_resource type="SphereShape3D" id="SphereShape3D_f365e"]
radius = 40.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8r85c"]
height = 0.25
radius = 3.0

[node name="Fire" type="RigidBody3D"]
collision_layer = 4
collision_mask = 4
physics_material_override = SubResource("PhysicsMaterial_05nir")
gravity_scale = 0.0
can_sleep = false
continuous_cd = true
angular_damp_mode = 1
script = ExtResource("1_b1qp2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_4f27a")
disabled = true

[node name="bladefire" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_3b3us")

[node name="bladecore" type="MeshInstance3D" parent="bladefire"]
mesh = SubResource("SphereMesh_oycmn")

[node name="corefire" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_f2402")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1u51c")
}

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 1)

[node name="Explosion" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Explosion"]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Explosion"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_r847y")

[node name="Damage" type="Area3D" parent="."]
gravity_space_override = 3
gravity_point = true
gravity_point_center = Vector3(0, 0, 0)
gravity_direction = Vector3(0, 0, 0)
gravity = -9800.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Damage"]
shape = SubResource("SphereShape3D_f365e")
disabled = true

[node name="Cuting" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cuting"]
shape = SubResource("CylinderShape3D_8r85c")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Explosion" to="." method="_on_explosion_body_entered"]
[connection signal="body_entered" from="Damage" to="." method="_on_damage_body_entered"]
[connection signal="body_entered" from="Cuting" to="." method="_on_cuting_body_entered"]
